# rst

./: .gitignore  Cargo.toml  dbs.toml  flake.nix  justfile  mongo_init.js  readme.md
lib/: Cargo.toml
lib/src/: chat.rs  invite.rs  jwt.rs  lib.rs  message.rs  uuid_serde.rs
lib/src/comm/: cinstruct.rs  cmessage.rs  mod.rs  sinstruct.rs  smessage.rs
lib/src/comm/client_instruct/: client_connect_request.rs  client_connect_response.rs  list_chats.rs  login_request.rs  mod.rs  register_request.rs  send_message.rs  show_invites_request.rs  show_metadata.rs
lib/src/comm/server_instruct/: ack.rs  login_response.rs  mod.rs  push_message.rs  register_response.rs  server_connect_request.rs  show_chats_response.rs  show_invites_response.rs  show_metadata.rs
lib/src/content/: image.rs  mod.rs
lib/src/db/: readme.md
lib/src/user/: mod.rs  query.rs  user_credential.rs  user_metadata.rs  userdata.rs
lib/src/util/: bson_util.rs  mod.rs
rst-auth-server/: Cargo.toml  readme.md
rst-auth-server/src/: error.rs  main.rs
rst-auth-server/src/db/: bson_util.rs  find.rs  insert.rs  message_util.rs  mod.rs  update.rs
rst-auth-server/src/handlers/: auth.rs  metadata.rs  mod.rs  query_uid.rs  register.rs
rst-client/: Cargo.toml
rst-client/src/: connection.rs  core.rs  error.rs  login.rs  main.rs
rst-client/src/subcommands/: accept_invite.rs  connect.rs  mod.rs  register.rs  send_chat_request.rs  send_message.rs  show_chats.rs  show_invites.rs
rst-proc-macro/: Cargo.toml  readme.md
rst-proc-macro/src/: lib.rs
rst-server/: Cargo.toml
rst-server/src/: main.rs  msg_chan.rs  state.rs
rst-server/src/auth/: login.rs  mod.rs  register.rs
rst-server/src/cache/: mod.rs
rst-server/src/db/: find.rs  insert.rs  mod.rs  update.rs
rst-server/src/handlers/: ack.rs  connect_response.rs  connect_with.rs  mod.rs  send_message.rs  show_chats.rs  show_invites.rs  show_metadata.rs
rst-server/src/util/: bson_util.rs  message_util.rs  mod.rs
