[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
mongodb = "3.2.2"
bson = { version = "2.13.0", features = ["uuid-1"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.14.0", features = ["v4", "serde", "v7"] }
rst-proc-macro = { path = "../rst-proc-macro" }
jsonwebtoken = "9.3.1"
futures = "0.3.31"
axum = { version = "0.8.1", features = ["ws"] }
