[package]
name = "rst-auth-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["full", "tracing"] }
axum = { version = "0.8.1", features = ["ws"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
lib = { path = "../lib"}
thiserror = "2.0.12"
mongodb = "3.2.2"
bson = { version = "2.13.0", features = ["uuid-1"]}
futures = "0.3.31"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
