[package]
name = "rst-client"
version = "0.1.0"
edition = "2024"

[dependencies]
# axum = { version = "0.8.1", features = ["ws"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.4"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.26.0"
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lib = { path = "../lib" }
serde_json = "1.0.140"
thiserror = "2.0.12"
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
uuid = { version = "1.14.0", features = ["v4", "serde", "v7"] }
reqwest = { version = "0.12.12", features = ["json"] }
reedline = { version = "0.40.0", features = ["external_printer"] }
tokio-util = "0.7.15"
rst-proc-macro = { path = "../rst-proc-macro" }
