[package]
name = "rst-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
lib = { path = "../lib"}
tokio-stream = "0.1.17"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
futures = "0.3.31"
uuid = { version = "1.14.0", features = ["v4", "serde", "v7"] }
mongodb = "3.2.2"
bson = { version = "2.13.0", features = ["uuid-1"]}
argon2 = "0.5.3"
redis = { version = "0.29.1", features = ["tokio-comp", "aio"] }
jsonwebtoken = "9.3.1"
